--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -15,7 +15,7 @@
       integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
-    <title>{TODO: Set title :) }</title>
+    <title>Puzzle</title>
   </head>
   <body>
     <div id="root"></div>
