--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -16,7 +16,7 @@
     <title>Puzzle</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="root"><!--ssr-outlet--></div>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
